2. JCIP. Настройка библиотеки [#268575]

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
       <version>3.23.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>net.jcip</groupId>
+      <artifactId>jcip-annotations</artifactId>
+      <version>1.0</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
